# findMissingWord

./: CMakeLists.txt  README.md
src/: findMissingWord.c  wordFileCompare.cpp
